# medical

./: .dockerignore  .eslintignore  .gitignore  ANALYSIS_SUMMARY.md  API_DOCUMENTATION_MERGED.md  ARCHITECTURE_ANALYSIS_14_QUESTIONS.md  BACKEND_CONSOLIDATION_DETAILED_ACTIONS.md  COMPLETE_API_DOCUMENTATION.md  CONSOLIDATION_IMPLEMENTATION_REPORT.md  COPY_PASTE_CODE_SNIPPETS.ts  DATA_RELATIONSHIPS_DOCUMENTATION.md  DELIVERY_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_CI_CD.md  DUPLICATE_ENDPOINTS_CONSOLIDATION_PLAN.md  DUPLICATE_FILES_RESOLUTION_GUIDE.md  ENDPOINT_VERIFICATION_REPORT.md  FRONTEND_UPDATE_REPORT.md  IMPLEMENTATION_REFERENCE.md  IMPLEMENTATION_STATUS_UPDATE.md  LEARNING_ECOSYSTEM_INTEGRATION_COMPLETE.md  MULTILAYER_INTEGRATION_GUIDE.md  SYSTEM_ARCHITECTURE_COMPLETE.md  api-test-output.txt  api-test-results.json  check-topic-data.ts  check-user-db.ts  compose.yaml  course_outline.html  generate-jwt-token-v2.js  generate-jwt-token.js  reorganize_analytics.py  run-integration-tests.ps1  start-rust-analytics-test.ps1  structural-gap-analysis.txt  test-all-endpoints.ps1  test-analytics-endpoints.sh  test-endpoints-detailed.ps1  test-notifications-api.ps1  test-rust-service.ps1  (+2 more)
rust_analytics/: .dockerignore  .env.example  .gitignore  ARCHITECTURE_VERIFICATION.md  BACKEND_INTEGRATION_REVIEW.txt  Cargo.toml  Dockerfile  Dockerfile.runtime  POLARS_RECOMMENDATIONS.md  SQLX_COMPILE_TIME_CHECKING.md  UNIFIED_DATABASE_MODELS.md  build.rs  build_error.txt  build_errors.txt  build_output_2.txt  test_failures.txt  test_recommendations.ps1
rust_analytics/.sqlx/: query-01701054675caaee133ed855a95fbc55c3c0e5e996927c1f14b9fd1545c98492.json  query-0a2f47a1222e3aca6724d7d3ba4d9d3e523b30e82d964bcbd6c02caf15ff1399.json  query-17579b492a097b37fa95ecee4c526adb326d4c7cf184c9e395b4ffc5edeb9d30.json  query-1e96f987d400dd0af43bfa0939d5ba6ca2ecc4c97defae2c5d42845a8a17f4a2.json  query-1eccf7bfcdffa57f6070262ec65ee42c3a78abd2dd758db9bab1a58f982f7308.json  (+29 more)
(+1056 files in other folders)
