[package]
name = "rust_analytics"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = ["ml"]
ml-dataframes = ["polars"]
ml-models = ["burn", "linfa", "linfa-linear", "ndarray"]
ml = ["ml-dataframes", "ml-models"]

[dependencies]
# Web & RPC
actix-web = "4.9"
tonic = "0.14.2"
tonic-prost = "0.14.2"

# Async runtime
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.77"
futures-util = "0.3.31"

# Serialization
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
bincode = "1.3.3"
prost = "0.14.1"
prost-types = "0.14.1"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "json", "bigdecimal", "macros", "migrate"] }
bigdecimal = "0.4"

# Data & ML (optional via feature `ml`)
polars = { version = "0.51.0", optional = true, features = ["lazy"] }
ndarray = { version = "0.16.1", features = ["rayon"], optional = true }
burn = { version = "0.19.1", default-features = false, features = ["ndarray"], optional = true }
linfa = { version = "0.8.0", optional = true }
linfa-linear = { version = "0.8.0", optional = true }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
humantime = "2.1"
lru = "0.16.2"
thiserror = "2.0.17"
anyhow = "1.0"
rand = "0.8"

# Auth & Config
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
dotenvy = "0.15"

# Monitoring
prometheus = "0.14.0"
once_cell = "1.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
validator = { version = "0.18", features = ["derive"] }

[workspace]
members = []
resolver = "2"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true

[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"



